# transformer-with-scratch

./: .gitignore  pyproject.toml
ROCm-setup/: README.md
ch01/: 002-p27.py  002-p29.py  002-p30.py  002-p31.py  002-p32.py  002-p33.py
ch02/: encode_swe.py
