[tool.poetry]
name = "transformer-with-scratch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "transformer_with_scratch"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
tensorflow-estimator = "^2.11.0"
tensorflow = "^2.11.0"
tensorflow-rocm = "^2.11.0.540"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
